ingress/ecommerce-v2/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: frontendv2
    app: ecommerce
  name: frontendv2
  namespace: ns1
spec:
  replicas: 1
  selector:
    matchLabels:
      service: frontendv2
      app: ecommerce
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        service: frontendv2
        app: ecommerce
    spec:
      containers:
      - args:
        - docker-entrypoint.sh
        command:
        - sh
        image: arapulido/frontend:2.0
        name: ecommerce-spree-observability
        ports:
        - containerPort: 3000
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits: {}
